--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,16 @@ button:not(.active):hover {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
+.separate {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+}
+
+#clearHistory {
+    cursor: pointer;
+}
+
 #watchHistory h2 {
     margin-top: 0;
 }
@@ -173,12 +183,17 @@ button:not(.active):hover {
     text-decoration: underline;
 }
 
+#backToPlayerDiv {
+    align-items: normal;
+    width: calc(80% + 30px);
+}
+
 .search-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
 }
 
 .search-container h1 {
