--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,10 @@ main {
     box-sizing: border-box;
 }
 
+main.fullwidth {
+    max-width: 100% !important;
+}
+
 .center {
     display: flex;
     align-items: center;
@@ -311,7 +315,7 @@ button:not(.active):hover {
 
 /* Highlighting search terms */
 .highlight {
-    background-color: #50198d;
+    background-color: #0066cc;
     padding: 2px 4px;
     border-radius: 3px;
     color: #ffffff;
